<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id"
        translatable="false">258166010350
    </string>


    <string name="app_name">TiCube</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- main menu constants -->
    <string name="play_vs">Play with friend</string>
    <string name="play_bot">Play with bot</string>
    <string name="play_online">Play online</string>
    <string name="quit">Quit</string>
    <string name="win">Win!</string>
    <string name="add_id">ca-app-pub-3797519520523288/1154535052</string>
    <string name="rematch">Rematch!</string>
    <string name="you_begin">I begin</string>
    <string name="bot_begin">bot begins</string>
    <string name="rating">Rating: </string>


    <!-- tutorial strings -->
    <string name="got_it">Got it!</string>
    <string name="intro">
    Ticube is a game similar to tictactoe, but played in 3 dimensions. You will see playboard.
        Rotate it with your finger.</string>
    <string name="win_one">Win by placing four cubes in a line like this for example</string>
    <string name="win_two">Another way to win is across the floors.</string>
    <string name="win_three">This is another way to win. Look at it carefully.</string>
    <string name="cube_button">Use this button to change from CubeView to FloorsView. CubeView is
        great for looking at playboard. You can only make moves in FloorsView.</string>
    <string name="first_floor">First floor of the cube.</string>
    <string name="second_floor">Second floor of the cube.</string>
    <string name="third_floor">Third floor of the cube.</string>
    <string name="fourth_floor">Fourth floor of the cube.</string>
    <string name="assisted_win">Tap to the green area to make move and win the game.</string>
    <string name="second_win">Try to find the position where red can win the game.</string>
    <string name="third_win">Nice. Now the last one. Remember you can score in the diagonal.</string>
    <string name="tutorial_end">Nice. You are ready to play!</string>
    <string name="next">Next</string>
    <string name="try_again">This move does not win the game. Try again.</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="very_hard">very hard</string>
    <string name="help">help</string>


    <!-- game strings -->
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="exit">Press again to exit</string>
    <string name="red_win">Red win!</string>
    <string name="blue_win">Blue win!</string>
    <string name="draw">Draw!</string>
    <string name="expire_red_win">Time expired. Red win!</string>
    <string name="expire_blue_win">Time expired. Blue win!</string>
    <string name="opponent_left">Opponent left. You win!</string>
    <string name="back_menu">Back to menu</string>


    <!-- game strings -->
    <string name="congrats">Congratulations!</string>
    <string name="all_bots_down">You have defeated all the bots</string>
    <string name="play_again">Play again</string>
    <string name="decide_continue">You can now advance to the next level.</string>
    <string name="cont">Continue</string>
    <string name="bot_name">Bot</string>
    <string name="player_name">Player</string>
    <string name="bad_connection">Cannot connect. Check your internet access.</string>


</resources>
