<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/play_vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_vs"
        android:onClick="playVersus"/>

    <Button
        android:id="@+id/play_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_bot"
        android:onClick="playBot"/>

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:onClick="quit"/>

</LinearLayout>