<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            ads:adSize="BANNER"
            ads:adUnitId="@string/add_id"/>

    </RelativeLayout>

    <sk.martin.tictactoe.frontend.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container" />

    <RelativeLayout
        android:background="@android:color/white"
        android:alpha="0.8"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/material_light_blue"
            android:layout_marginTop="70dp"
            android:text="@string/app_name"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/tutorial"
            android:layout_alignStart="@+id/tutorial" />

        <Button
            android:id="@+id/online"
            android:text="@string/play_online"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="145dp"
            android:theme="@style/MyButton"
            android:textAllCaps="false"
            android:onClick="playOnline"
            android:visibility="visible"
            android:layout_below="@+id/label"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/online"
            android:layout_centerHorizontal="true"
            android:textColor="@color/material_light_blue"/>

        <Button
            android:id="@+id/versus"
            android:text="@string/play_vs"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:textAllCaps="false"
            android:onClick="playVersus"
            android:layout_below="@+id/rating"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/bot"
            android:text="@string/play_bot"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:theme="@style/MyButton"
            android:layout_below="@+id/versus"
            android:textAllCaps="false"
            android:onClick="playBot"/>

        <info.hoang8f.android.segmented.SegmentedGroup
            xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
            android:id="@+id/turn_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:orientation="horizontal"
            android:layout_below="@+id/bot"
            android:layout_centerHorizontal="true"
            segmentedgroup:sc_border_width="2dp"
            segmentedgroup:sc_corner_radius="10dp">

            <RadioButton
                android:id="@+id/player_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_begin"
                style="@style/RadioButton" />

            <RadioButton
                android:id="@+id/bot_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bot_begin"
                style="@style/RadioButton" />

        </info.hoang8f.android.segmented.SegmentedGroup>

        <ImageView
            android:id="@+id/first_lock"
            android:layout_alignLeft="@+id/turn_control"
            android:layout_alignTop="@+id/turn_control"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="45dp"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/first_star"
            android:layout_alignLeft="@+id/turn_control"
            android:layout_alignTop="@+id/turn_control"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="45dp"
            android:src="@drawable/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/second_lock"
            android:layout_alignRight="@+id/turn_control"
            android:layout_alignTop="@+id/turn_control"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/second_star"
            android:layout_alignRight="@+id/turn_control"
            android:layout_alignTop="@+id/turn_control"
            android:layout_marginTop="17dp"
            android:src="@drawable/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/seek_bar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/turn_control"
            android:theme="@style/Material.Dark"/>

        <TextView
            android:id="@+id/difficultyText"
            android:text="Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_bar"
            android:layout_marginLeft="15dp"
            android:textColor="@color/material_light_blue"
            android:layout_below="@+id/seek_bar"/>

        <Button
            android:id="@+id/tutorial"
            android:text="tutorial"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:textAllCaps="false"
            android:onClick="tutorial"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:src="@drawable/leaderboard"
            android:background="@android:color/transparent"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:onClick="seeLeaderboard"
            android:layout_marginRight="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:scaleType="centerInside"
            />

        <ImageButton
            android:src="@drawable/achievement"
            android:background="@android:color/transparent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="seeAchievements"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:scaleType="centerInside"
            />

    </RelativeLayout>

</RelativeLayout>