<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/white"
            ads:adSize="BANNER"
            ads:adUnitId="@string/add_id"/>

        <TextView
            android:id="@+id/inform"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    
    <View
        android:id="@+id/first"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="100dp"
        android:layout_width="1dp"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/second"
        android:layout_alignParentRight="true"
        android:layout_marginTop="250dp"
        android:layout_marginRight="100dp"
        android:layout_width="1dp"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/third"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="100dp"
        android:layout_width="1dp"
        android:layout_height="1dp"/>

    <View
        android:id="@+id/fourth"
        android:layout_alignParentRight="true"
        android:layout_marginTop="400dp"
        android:layout_marginRight="100dp"
        android:layout_width="1dp"
        android:layout_height="1dp"/>

    <sk.martin.tictactoe.frontend.GameView
        android:id="@+id/game_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container" />

    <ImageButton
        android:id="@+id/cube_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_border_all_black_48dp" />

    <!--
    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="New Game"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Back"/>
        -->

    <sk.martin.tictactoe.frontend.RoundedImageView
        android:id="@+id/turn_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <ProgressBar
        android:id="@+id/thinking_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/turn_view"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/winText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:animateLayoutChanges="true"
        android:text="@string/win"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/rematch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/rematch"
        android:visibility="invisible" />

    <Button
        android:id="@+id/got_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:text="@string/next"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/shade"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>
